<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Boa Viagem</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_login">sign up</string>
    <string name="lbl_pwd">password</string>
    <string name="erro_autenticao">usuário ou senha inválida.</string>
    <string name="novo_gasto">Novo Gasto</string>
    <string name="nova_viagem">Nova Viagem</string>
    <string name="minhas_viagens">Minhas Viagens</string>
    <string name="configuracoes">Configurações</string>
    <string name="destino">destino</string>
    <string name="tipo_viagem">Tipo de Viagem:</string>
    <string name="lazer">Lazer</string>
    <string name="negocios">Negócios</string>
    <string name="data_da_chegada">Data Chegada</string>
    <string name="data_da_saida">Data Saída</string>
    <string name="orcamento">Orçamento</string>
    <string name="nro_pessoas">Nro de pessoas:</string>
    <string name="title_activity_nova_viagem">NovaViagemActivity</string>
    <string name="title_activity_gasto">Gasto</string>
    <string name="viagem">Viagem</string>
    <string name="valor">Valor</string>
    <string name="data">Data</string>
    <string name="selecione">selecione</string>
    <string name="descricao">Descrição</string>
    <string name="local">Local</string>
    <string name="gastei">Gastei!</string>
    <string name="categoria">Categoria</string>
    <string name="sair">sair</string>
    <string name="remover_viagem">Remover Viagem</string>
    <string name="remover">Remover</string>
    <string name="editar">Editar</string>
    <string name="gastos_realizados">Gastos Realizados</string>
    <string name="opcoes">Opções</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="confirmacao_exclusao_viagem">Tem certeza que deseja excluir?</string>
    <string name="preferencias">Preferências</string>
    <string name="modo_viagem_sumario">modo viagem sumário</string>
    <string name="modo_viagem">modo viagem</string>
    <string name="informe_valor_limite">valor limite</string>
    <string name="valor_limite_sumario">valor sumário</string>
    <string name="valor_limite">valor limite</string>
    <string name="registro_salvo">salvo com sucesso</string>
    <string name="erro_salvar">erro ao salvar</string>
    <string name="manter_conectado">manter me logado</string>
    <string name="editado">editado com sucesso.</string>

    <string-array name="categoria_gasto">
        <item>Alimentação</item>
        <item>Combustível</item>
        <item>Transporte</item>
        <item>Hospedagem</item>
        <item>Outros</item>
    </string-array>

    <string name="title_activity_viagem_list">ViagemListActivity</string>
    <string name="title_activity_gasto_list">GastoListActivity</string>

</resources>
