<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff00b4ff">
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#015488">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/novo_gasto"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceLarge"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/viagem"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceLarge"/>
        </LinearLayout>
        <TextView
            android:text="@string/categoria"/>
        <Spinner android:id="@+id/categoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/categoria"></Spinner>
        <TextView android:text="@string/valor"/>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/data"/>
        </TableRow>
        <TableRow>
            <EditText android:inputType="numberDecimal"
                android:layout_width="wrap_content"
                android:id="@+id/gasto_valor"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/gasto_data"
                android:text="@string/selecione"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>
        <TextView android:text="@string/descricao" />
        <EditText android:id="@+id/txt_descricao" />
        <TextView android:text="@string/local" />
        <EditText android:id="@+id/txt_local" />
        <Button android:text="@string/gastei" />
    </TableLayout>
</ScrollView>
