<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentRight="true"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:id="@+id/editText"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ff166788"
        android:textColor="#FFFFFF"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/novo_gasto"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="80dp"
            android:clickable="true"
            android:drawableTop="@drawable/novo_gasto"
            android:text="@string/novo_gasto"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nova_viagem"
            android:id="@+id/nova_viagem"
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dp"
            android:layout_marginTop="80dp"
            android:clickable="true"
            android:drawableTop="@drawable/nova_viagem"
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/minhas_viagens"
            android:layout_marginLeft="50dp"
            android:clickable="true"
            android:layout_below="@+id/novo_gasto"
            android:layout_alignParentStart="true"
            android:textColor="#FFFFFF"
            android:drawableTop="@drawable/minhas_viagens"
            android:text="@string/minhas_viagens"
            android:layout_marginTop="180dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configuracoes"
            android:id="@+id/configuracoes"
            android:layout_marginRight="50dp"
            android:layout_below="@+id/nova_viagem"
            android:layout_marginTop="180dp"
            android:clickable="true"
            android:drawableTop="@drawable/configuracoes"
            android:textColor="#FFFFFF"
            android:layout_alignParentEnd="true" />


    </RelativeLayout>
</LinearLayout>
